[metadata]
name = imagedata
version = file: VERSION.txt
# version = 1.2.4
license = MIT
license_files = LICENSE.txt
author = Erling Andersen
author_email = Erling.Andersen@Helse-Bergen.NO
description = Read/write medical image data
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/erling6232/imagedata
project_urls =
        Documentation = https://imagedata.readthedocs.io
        Source Code = https://github.com/erling6232/imagedata
keywords =
    dicom
    python
    medical
    imaging
    pydicom
    pynetdicom
    itk
classifiers =
        Programming Language :: Python :: 3
        Development Status :: 4 - Beta
        Environment :: Other Environment
        Intended Audience :: Developers
        Intended Audience :: Healthcare Industry
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Topic :: Software Development :: Libraries :: Python Modules
        Topic :: Scientific/Engineering :: Medical Science Apps.

[bdist_wheel]
universal=0

[options]
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.5
install_requires =
    pydicom>=1.0.1
    pynetdicom>=1.2.0
    itk>=5.0
    nibabel
    numpy >= 1.13
    scipy
    fs
    python-magic
    ghostscript
    imageio
    scandir
    pathfinder
    # xnat
    pillow
    matplotlib
tests_require =
    nose

[options.packages.find]
where = src
#include =
#    imagedata.apps
#    imagedata.archives
#    imagedata.formats
#    imagedata.transports

[options.entry_points]
console_scripts =
    image_calculator = imagedata.image_data:calculator
    image_data = imagedata.image_data:conversion
    image_statistics = imagedata.image_data:statistics
    timeline = imagedata.image_data:timeline
    dicom_dump = imagedata.image_data:dump

[coverage:run]
branch = True
# include = */imagedata/*

[coverage:paths]
source =
   imagedata
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/, data/
