[metadata]
name = imagedata
version = file: VERSION.txt
license = MIT
license_files = LICENSE.txt
author = Erling Andersen
author_email = Erling.Andersen@Helse-Bergen.NO
description = Read/write medical image data
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/erling6232/imagedata
project_urls =
        Documentation = https://imagedata.readthedocs.io
        Source Code = https://github.com/erling6232/imagedata
keywords =
    dicom
    python
    medical
    imaging
    pydicom
    pynetdicom
    itk
classifiers =
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Development Status :: 4 - Beta
        Environment :: Other Environment
        Intended Audience :: Developers
        Intended Audience :: Healthcare Industry
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Topic :: Software Development :: Libraries :: Python Modules
        Topic :: Scientific/Engineering :: Medical Science Apps.

[bdist_wheel]
universal=0

[options]
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.9,<3.13
install_requires =
    # importlib_metadata; python_version < '3.8'
    sortedcontainers
    pydicom>=2.1.0
    pynetdicom>=1.2.0, <2
    itk-io>=5.3; python_version < '3.12'
    itk-io>=5.4rc2; python_version >= '3.12'
    scikit-build-core
    nibabel >= 5.0.0
    # numpy >= 1.20, < 1.27
    numpy == 2.0.0b1
    pandas
    scipy >= 1.13.0
    python-magic
    python-magic-bin; platform_system=='Windows'
    imageio
    pillow >= 10.0.0
    xnat
    matplotlib >= 3.7.0
    opencv-python-headless
    # ipywidgets>=7,<9
setup_requires =
    build

[options.packages.find]
where = src

[options.entry_points]
imagedata_plugins =
    dicomformat = imagedata.formats.dicomplugin:DICOMPlugin
    itkformat = imagedata.formats.itkplugin:ITKPlugin
    matformat = imagedata.formats.matplugin:MatPlugin
    niftiformat = imagedata.formats.niftiplugin:NiftiPlugin
    filesystemarchive = imagedata.archives.filesystemarchive:FilesystemArchive
    zipfilearchive = imagedata.archives.zipfilearchive:ZipfileArchive
    dicomtransport = imagedata.transports.dicomtransport:DicomTransport
    filetransport = imagedata.transports.filetransport:FileTransport
    xnattransport = imagedata.transports.xnattransport:XnatTransport
console_scripts =
    dicom_dump = imagedata.image_data:dump
    image_calculator = imagedata.image_data:calculator
    image_data = imagedata.image_data:conversion
    image_list = imagedata.image_data:image_list
    image_show = imagedata.image_data:show
    image_statistics = imagedata.image_data:statistics
    timeline = imagedata.image_data:timeline

[coverage:run]
branch = True

[coverage:paths]
source =
   imagedata

[coverage:report]
show_missing = True

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .tox, .eggs, .coveragerc, __pycache__, tests/, docs/, build/, dist/, data/,
    imagedata/apps/Siemens/evidence2mask.py, imagedata/apps/Siemens/evidence_main.py, venv/,
    load_data.py
# select = E,F
# ignore = E126,E231,E226,E265,E402,E731,F401,F721,F821,F841
per-file-ignores =
    src/imagedata/__init__.py:F401
    src/imagedata/collections.py:F721
